# LuminaQuant

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_KR.md  SECURITY.md  config.yaml  dashboard.py  docker-compose.yml  equity.csv  generate_data.py  optimize.py  publish_api.ps1  publish_api.sh  pyproject.toml  run_backtest.py  run_bot.bat  run_bot.sh  run_live.py  run_live_ws.py  sync_private.ps1  sync_private.sh  trades.csv
.github/: PULL_REQUEST_TEMPLATE.md  hardcoded_params_baseline.json  public_sync_note.md
.omx/: notepad.md
configs/: config.example.yaml  score_config.example.json
data/: BTCUSDT.csv  ETHUSDT.csv
docs/: API.md  DASHBOARD_REALTIME_ANALYSIS_REPORT.md  DEPLOYMENT.md  DESIGN_NOTES_GPU_AUTO.md  EXCHANGES.md  EXTERNAL_DATA.md  FINAL_VALIDATION.md  FUTURES_STRATEGY_FACTORY.md  METRICS.md  MIGRATION_GUIDE_POSTGRES_PARQUET.md  MINIMAL_INSTALLS.md  OPTIMIZATION_REFACTOR_NOTES.md  PORTFOLIO_8GB_PUSH_READINESS_CHECKLIST.md  QUANT_RESEARCH_FACTORY.md  QUICKSTART_8GB_BASELINE.md  RUNBOOK_1Y_1S_LOCAL.md  SCORING_CONFIG_GUIDE.md  STRATEGY_FACTORY_WORKER3_REPORT.md  STRATEGY_FACTORY_WORKER4_REPORT.md  TRADING_MANUAL.md  VALIDATION_REPORT.md  WORKFLOW.md  WSL_CLONE_PRIVATE_PUBLIC.md  WSL_MT5_COMMANDS.md  architecture_pattern_benchmark_adoption.md  autonomous-research-resume-2026-03-15.md  dashboard-cutover-handoff-2026-03-25.md  hybrid_live_investability_20260417.md  next_session_prompt_profit_moonshot_liquidation_aware_20260510.md  performance_first_threshold_coverage_adjusted_retune_20260417.md  performance_first_threshold_sensitivity_20260416.md  profit_moonshot_next_hypotheses_20260508.md  profit_moonshot_research_history_20260510.md  session_handoff_20260408_article_pipeline.md  session_handoff_20260409_article_pipeline_reboot.md  session_handoff_20260411_article_pipeline_complete_and_pair_followup.md  session_handoff_20260411_article_pipeline_continue.md  session_handoff_20260411_article_pipeline_post_timeout_wave.md  session_handoff_20260411_wal_bottleneck_mitigated.md  session_handoff_20260412_broader_redesign_and_ralph_audit.md  (+22 more)
lumina_quant/: backtest.py  binance_execution.py  compute_engine.py  config.py  data.py  data_collector.py  data_sync.py  engine.py  event_clock.py  events.py  execution.py  influx_market_data.py  interfaces.py  live_data.py  live_data_ws.py  live_execution.py  live_selection.py  live_trader.py  market_data.py  message_bus.py  parquet_market_data.py  portfolio.py  replay.py  risk_manager.py  runtime_cache.py  (+4 more)
(+3096 files in other folders)
